chore: Improve reliability #2